--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     //for QR Scanner
     implementation 'com.budiyev.android:code-scanner:2.1.0'
+
+    //for location
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
